<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/army_of_ones_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/text_value_us"
            android:layout_width="@dimen/input_text_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/currency_us_symbol"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_convert"
            android:layout_width="@dimen/button_convert_layout_width"
            android:layout_height="@dimen/button_convert_layout_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_convert_margin_bottom"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/buttonshape"
            android:text="@string/button_convert"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_convert_text_size"
            android:focusable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_padding">

            <ImageView
                android:layout_width="@dimen/flag_size"
                android:layout_height="@dimen/flag_size"
                android:layout_marginRight="@dimen/flag_img_margin"
                android:src="@drawable/eu" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_rate_eu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_rate"
                    android:textSize="@dimen/flag_text_rate_size" />

                <TextView
                    android:id="@+id/text_value_eu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_euro_symbol"
                    android:textSize="@dimen/flag_text_value_size" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/flag_size"
                android:layout_height="@dimen/flag_size"
                android:layout_marginRight="@dimen/flag_img_margin"
                android:src="@drawable/jp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_rate_jp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rate: 0"
                    android:textSize="@dimen/flag_text_rate_size" />

                <TextView
                    android:id="@+id/text_value_jp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_jpn_symbol"
                    android:textSize="@dimen/flag_text_value_size" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_padding">

            <ImageView
                android:layout_width="@dimen/flag_size"
                android:layout_height="@dimen/flag_size"
                android:layout_marginRight="@dimen/flag_img_margin"
                android:src="@drawable/uk" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_rate_uk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_rate"
                    android:textSize="@dimen/flag_text_rate_size" />

                <TextView
                    android:id="@+id/text_value_uk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_grb_symbol"
                    android:textSize="@dimen/flag_text_value_size" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/flag_size"
                android:layout_height="@dimen/flag_size"
                android:layout_marginRight="@dimen/flag_img_margin"
                android:src="@drawable/br" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_rate_bz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_rate"
                    android:textSize="@dimen/flag_text_rate_size" />

                <TextView
                    android:id="@+id/text_value_bz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_brl_symbol"
                    android:textSize="@dimen/flag_text_value_size" />
            </LinearLayout>

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height"
            android:layout_marginTop="@dimen/chart_margin"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
